--- a/src/components/formComponent/index.less
+++ b/src/components/formComponent/index.less
@@ -1,33 +1,29 @@
 input {
     border: none;
     outline: none;
-    padding:0;
+    padding: 0;
 }
-button{
-    border:none;
-    outline:none;
-    background-color:transparent;
+
+button {
+    border: none;
+    outline: none;
 }
-.qw-form:not(.normal) {
+
+.qw-form {
     .label {
         display: flex;
         align-items: center;
         padding: 5px 10px;
         box-sizing: border-box;
-        text-align: center;
-        background-color: #e0dfff;
-        color: #78849e;
-        font-weight: bolder;
-        border-top-left-radius: 10px;
-        border-bottom-left-radius: 10px;
         font-size: 14px;
         white-space: nowrap;
     }
-    .content {
-        width: 100%;
-        background-color: #eee;
-        border-top-right-radius: 10px;
-        border-bottom-right-radius: 10px;
-        font-size: 14px;
+
+    .error-msg {
+        position: absolute;
+        bottom: -18px;
+        font-size: 12px;
+        color: #f56c6c;
+        padding-left: 5px;
     }
 }
