对之前说完成的进度的备份

--- a/src/assets/css/goodsManage.less
+++ b/src/assets/css/goodsManage.less
@@ -64,6 +64,10 @@
         padding: 20px 25px;
         box-sizing: border-box;
 
+        .qw-button{
+            color:white;
+        }
+
         /* 返回按钮的样式 */
         .back {
             width: 50px;
@@ -115,7 +119,7 @@
                     margin:0 5px;
                     width:60px;
                     &.remove-btn{
-                        background-color:rgb(229,79,80);
+                        background-color:rgb(229,79,80);  
                     }
                 }
             }
@@ -324,6 +328,10 @@
                         height: 35px;
                         justify-content: space-between;
 
+                        .qw-input{
+                            flex:1 1 auto;
+                            text-align: center;
+                        }
                         .left,
                         .right {
                             flex: 0 0 45%;
