--- a/src/assets/css/categoryManage.less
+++ b/src/assets/css/categoryManage.less
@@ -48,14 +48,27 @@
                 cursor: pointer;
                 transition: all 0.3s;
                 position: relative;
-
+                outline: none;
+                user-select: none;
                 &:hover {
                     background-color: rgba(58, 205, 225, 0.2);
                 }
 
-                &.active {
+                &.active,.edit-box {
                     background-color: rgb(58, 205, 225);
                     color: white;
+                }
+
+                .edit-box{
+                    font-size: 20px;
+                    text-align: center;
+                    width: 100%;
+                    position:absolute;
+                    left:0;
+                    right:0;
+                    top: 0;
+                    bottom : 0;
+                    background-color:#ff8c8c;
                 }
             }
 
