--- a/src/assets/css/goodsManage.less
+++ b/src/assets/css/goodsManage.less
@@ -3,40 +3,48 @@
     .table-filter {
         width: 100%;
         background-color: white;
-        padding: 20px;
+        padding: 12px;
         border-radius: 15px;
         box-sizing: border-box;
         display: flex;
-        flex-wrap: wrap;
+        // flex-wrap: wrap;
         justify-content: space-between;
-
-        label {
-            display: inline-block;
-            flex: 1 1 33%;
-            vertical-align: middle;
+        align-items: center;
+        .condition-box {
+            flex:0 0 25%;
+            display: flex;
+            // border: 1px solid black;
+            align-items: center;
+            padding:5px;
+            box-sizing: border-box;
         }
 
-        input {
-            width: 150px;
+        input,.qw-select {
+            width: 140px;
             height: 30px;
             margin: 0 10px;
             border-radius: 5px;
             border: 1px solid rgb(102, 94, 255);
-            padding: 10px;
+            // padding: 10px;
+            padding:0 10px;
             box-sizing: border-box;
             vertical-align: middle;
         }
+        .qw-select{
+            padding:0;
+        }
 
         .operation {
-            margin-left: auto;
-
+            // margin-left: auto;
+            display: flex;
+            flex-direction: column;
             &>button {
                 width: 60px;
                 height: 30px;
                 padding: 5px 10px;
                 box-sizing: border-box;
                 border-radius: 7px;
-                margin: 0 10px;
+                margin: 2px 10px;
                 cursor: pointer;
 
                 &:active {
@@ -61,7 +69,7 @@
         margin-top: 20px;
         background-color: white;
         border-radius: 15px;
-        padding: 20px 25px;
+        padding: 15px 25px;
         box-sizing: border-box;
 
         .qw-button{
