--- a/src/assets/css/login.less
+++ b/src/assets/css/login.less
@@ -43,7 +43,7 @@
                 position: relative;
                 background-color: white;
                 box-sizing: border-box;
-                padding-left:20px;
+                padding-left:30px;
                 & input{
                     outline: red;
                 }
@@ -94,10 +94,9 @@
             i {
                 display: inline-block;
                 height: 20px;
-                left: 10px;
-                top: 50%;
+                // left: 10px;
+                // top: 50%;
                 line-height: 20px;
-                margin-top: -10px;
 
                 &::after{
                     color:#665eff;
